# jf

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: test.rs
tests/fixtures/: mixed.jf.json  mixed.json
